# ChangeLog for x11-misc/xkbd
# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-misc/xkbd/ChangeLog,v 1.14 2008/12/21 17:34:47 solar Exp $

  21 Dec 2008; <solar@gentoo.org> xkbd-0.8.12.ebuild:
  - keyword ~arm

  17 Jun 2008; Krzysiek Pawlik <nelchael@gentoo.org> xkbd-0.8.12.ebuild:
  Add missing x11-proto/inputproto to DEPEND, bug #227667.

  22 Feb 2007; Markus Ullmann <jokey@gentoo.org> ChangeLog:
  Redigest for Manifest2

  21 Oct 2006; David Shakaryan <omp@gentoo.org> xkbd-0.8.12.ebuild:
  Remove monolithic X from dependencies, `` to $() and other minor cleanup.

  14 Jan 2006; Krzysiek Pawlik <nelchael@gentoo.org> xkbd-0.8.12.ebuild:
  Removed sys-devel/libtool from RDEPEND.

  13 Jan 2006; Krzysiek Pawlik <nelchael@gentoo.org> xkbd-0.8.12.ebuild:
  Fixed DEPEND for modular X, bug #118300.

  03 Nov 2005; Krzysiek Pawlik <nelchael@gentoo.org> xkbd-0.8.12.ebuild:
  Fixed dodoc not to install COPYING and/or INSTALL.

  26 Jul 2005; David Holm <dholm@gentoo.org> xkbd-0.8.12.ebuild:
  Added to ~ppc.

  09 Aug 2004; Tom Martin <slarti@gentoo.org> xkbd-0.8.12.ebuild:
  Marked ~amd64 for bug 58972

  23 Jun 2004; Aron Griffis <agriffis@gentoo.org> xkbd-0.8.12.ebuild:
  QA - fix use invocation

  26 Apr 2004; Aron Griffis <agriffis@gentoo.org> xkbd-0.8.12.ebuild:
  Add die following econf for bug 48950

  11 Apr 2004; Markus Nigbur <pyrania@gentoo.org> xkbd-0.8.12.ebuild:
  Marked stable. Ebuild fixups.

*xkbd-0.8.12 (24 Nov 2003)

  24 Nov 2003; Abhishek Amit <abhishek@gentoo.org> xkbd-0.8.12.ebuild:
  Initial import.  Ebuild submitted by Rene Wagner <reenoo@gmx.de>.