@@ -1,6 +1,9 @@
 # ChangeLog for x11-misc/xkbd
-# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/xkbd/ChangeLog,v 1.14 2008/12/21 17:34:47 solar Exp $
+# Copyright 2000-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/xkbd/ChangeLog,v 1.15 2009/01/05 14:02:40 remi Exp $
+
+  05 Jan 2009; Rémi Cardona <remi@gentoo.org> xkbd-0.8.12.ebuild:
+  Change virtual/xft dependency to x11-libs/libXft, bug 253771.
 
   21 Dec 2008; <solar@gentoo.org> xkbd-0.8.12.ebuild:
   - keyword ~arm
